# westsidevbc-api

./: .gitignore  .pdm-python  Dockerfile  pyproject.toml  requirements.txt  vercel.json
app/: __init__.py  auth.py  db.py  error.py  main.py
app/routes/: auth.py  leaderboard.py
