[project]
name = "westsidevbc-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ReiButBad", email = "reibutbad@gmail.com"},
]
dependencies = ["fastapi[standard]>=0.115.6", "asyncpg>=0.30.0", "orjson>=3.10.13", "python-dotenv>=1.0.1", "passlib[bcrypt]>=1.7.4", "pyjwt>=2.10.1", "uvicorn[standard]>=0.34.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPL-3.0"}

[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.30.0",
    "black>=24.10.0",
]
